Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-30968

mariadb-backup does not copy Aria logs if aria_log_dir_path is used

    XMLWordPrintable

Details

    Description

      If I add `aria-log-dir-path` to my.cnf, e.g.:

      [mariadb-10.5]
      aria-log-dir-path=/opt/mariadb-10.5/data-aria-logs
      

      start the server, then run maridb-backup --backup,
      Aria logs do not get copied to the backup directory:

      $ ls -l /opt/mariadb-10.5/backup/xtrabackup_backupfiles/
      total 77856
      -rw-rw----. 1 bar bar      285 Mar 30 09:39 backup-my.cnf
      -rw-rw----. 1 bar bar 79691776 Mar 30 09:39 ibdata1
      -rw-rw----. 1 bar bar     2560 Mar 30 09:39 ib_logfile0
      drwx------. 2 bar bar     4096 Mar 30 09:39 mysql
      drwx------. 2 bar bar     4096 Mar 30 09:39 performance_schema
      drwx------. 2 bar bar     4096 Mar 30 09:39 test
      -rw-rw----. 1 bar bar       79 Mar 30 09:39 xtrabackup_checkpoints
      -rw-rw----. 1 bar bar      417 Mar 30 09:39 xtrabackup_info
      

      Notice, there are no Aria log files ^^^.

      These log files from a non-default directory did not get copied:

      $ ls -l /opt/mariadb-10.5/data-aria-logs
      total 12
      -rw-rw----. 1 bar bar 8192 Mar 30 09:39 aria_log.00000001
      -rw-rw----. 1 bar bar   52 Mar 30 09:39 aria_log_control
      

      Attachments

        Issue Links

          Activity

            People

              bar Alexander Barkov
              bar Alexander Barkov
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 0d
                  0d
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 4d 0.5h
                  4d 0.5h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.